@@ -1,5 +1,6 @@
 package org.hyperledger.iroha.android.model.instructions;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -32,7 +33,7 @@ public final class JoinKaigiInstruction implements InstructionTemplate {
     this.nullifierIssuedAtMs = builder.nullifierIssuedAtMs;
     this.rosterRoot = builder.rosterRoot;
     this.proofBase64 = builder.proofBase64;
-    this.arguments = Map.copyOf(argumentOrder);
+    this.arguments = Collections.unmodifiableMap(new LinkedHashMap<>(argumentOrder));
   }
 
   public KaigiInstructionUtils.CallId callId() {
@@ -78,25 +79,33 @@ public final class JoinKaigiInstruction implements InstructionTemplate {
   }
 
   public static JoinKaigiInstruction fromArguments(final Map<String, String> arguments) {
+    KaigiInstructionUtils.requireAction(arguments, ACTION);
     final Builder builder = builder();
     builder.setCallId(KaigiInstructionUtils.parseCallId(arguments, "call"));
     builder.setParticipant(KaigiInstructionUtils.require(arguments, "participant"));
 
+    if (arguments.get("commitment.alias_tag") != null) {
+      throw new IllegalArgumentException(
+          "commitment aliasTag is off-chain only and must be omitted");
+    }
     final String commitmentValue = arguments.get("commitment.commitment");
     if (commitmentValue != null) {
       builder.setCommitmentLiteral(commitmentValue);
-      final String alias = arguments.get("commitment.alias_tag");
-      if (alias != null) {
-        builder.setCommitmentAliasTag(alias);
-      }
     }
 
     final String nullifier = arguments.get("nullifier.digest");
+    final Long issuedAt =
+        KaigiInstructionUtils.parseOptionalUnsignedLong(
+            arguments.get("nullifier.issued_at_ms"), "nullifier.issued_at_ms");
+    if (issuedAt != null && issuedAt.longValue() != 0L) {
+      throw new IllegalArgumentException(
+          "nullifier issuedAtMs is off-chain only and must be zero when provided");
+    }
+    if (issuedAt != null && nullifier == null) {
+      throw new IllegalArgumentException("nullifier issuedAtMs requires nullifier digest");
+    }
     if (nullifier != null) {
       builder.setNullifierDigest(nullifier);
-      final Long issuedAt =
-          KaigiInstructionUtils.parseOptionalUnsignedLong(
-              arguments.get("nullifier.issued_at_ms"), "nullifier.issued_at_ms");
       builder.setNullifierIssuedAtMs(issuedAt);
     }
 
@@ -189,7 +198,11 @@ public final class JoinKaigiInstruction implements InstructionTemplate {
     }
 
     public Builder setCommitmentAliasTag(final String aliasTag) {
-      this.commitmentAliasTag = aliasTag;
+      if (aliasTag != null) {
+        throw new IllegalArgumentException(
+            "commitment aliasTag is off-chain only and must be omitted");
+      }
+      this.commitmentAliasTag = null;
       return this;
     }
 
@@ -204,8 +217,9 @@ public final class JoinKaigiInstruction implements InstructionTemplate {
     }
 
     public Builder setNullifierIssuedAtMs(final Long issuedAtMs) {
-      if (issuedAtMs != null && issuedAtMs < 0) {
-        throw new IllegalArgumentException("nullifier issuedAtMs must be non-negative");
+      if (issuedAtMs != null && issuedAtMs.longValue() != 0L) {
+        throw new IllegalArgumentException(
+            "nullifier issuedAtMs is off-chain only and must be zero when provided");
       }
       this.nullifierIssuedAtMs = issuedAtMs;
       return this;
@@ -244,6 +258,9 @@ public final class JoinKaigiInstruction implements InstructionTemplate {
       if (participant == null) {
         throw new IllegalStateException("participant must be provided");
       }
+      if (nullifierIssuedAtMs != null && nullifierDigest == null) {
+        throw new IllegalStateException("nullifier issuedAtMs requires nullifier digest");
+      }
       return new JoinKaigiInstruction(this);
     }
 
@@ -254,9 +271,6 @@ public final class JoinKaigiInstruction implements InstructionTemplate {
       args.put("participant", participant);
       if (commitment != null) {
         args.put("commitment.commitment", commitment);
-        if (commitmentAliasTag != null) {
-          args.put("commitment.alias_tag", commitmentAliasTag);
-        }
       }
       if (nullifierDigest != null) {
         args.put("nullifier.digest", nullifierDigest);
