@@ -1,52 +1,46 @@
 package org.hyperledger.iroha.android.nexus;
 
-import java.util.Locale;
 import java.util.Objects;
 
-/** Helpers for canonicalizing exact UAID literals before issuing Torii requests. */
+/** Helpers for validating exact UAID literals before issuing Torii requests. */
 public final class UaidLiteral {
 
   private UaidLiteral() {}
 
   /**
-   * Canonicalizes the provided exact UAID literal and returns the canonical `uaid:<hex>` form.
+   * Validates and returns the provided exact {@code uaid:<64 lowercase hex>} literal.
    *
-   * @param value raw UAID literal (with or without the {@code uaid:} prefix)
-   * @return canonical literal
+   * @param value exact canonical UAID literal
+   * @return the unchanged literal
    */
   public static String canonicalize(final String value) {
     return canonicalize(value, "uaid");
   }
 
   /**
-   * Canonicalizes the provided exact UAID literal and returns the canonical `uaid:<hex>` form.
+   * Validates and returns the provided exact {@code uaid:<64 lowercase hex>} literal.
    *
-   * @param value raw UAID literal (with or without the {@code uaid:} prefix)
+   * @param value exact canonical UAID literal
    * @param context field description used in validation errors
-   * @return canonical literal
+   * @return the unchanged literal
    */
   public static String canonicalize(final String value, final String context) {
     Objects.requireNonNull(context, "context");
     final String literal = requireExactNonEmpty(value, context);
-    final String lower = literal.toLowerCase(Locale.ROOT);
-    final String hexPortion =
-        lower.startsWith("uaid:") ? literal.substring("uaid:".length()) : literal;
-    if (!hexPortion.trim().equals(hexPortion)) {
-      throw new IllegalArgumentException(context + " must not contain surrounding whitespace");
+    if (!literal.matches("uaid:[0-9a-f]{64}")) {
+      throw new IllegalArgumentException(
+          context + " must be an exact canonical uaid:<64 lowercase hex> literal");
     }
-    if (hexPortion.length() != 64 || !hexPortion.matches("(?i)[0-9a-f]{64}")) {
-      throw new IllegalArgumentException(context + " must contain 64 hex characters");
-    }
-    final char lastChar = hexPortion.charAt(hexPortion.length() - 1);
-    if ("13579bdf".indexOf(Character.toLowerCase(lastChar)) < 0) {
+    final char lastChar = literal.charAt(literal.length() - 1);
+    if ("13579bdf".indexOf(lastChar) < 0) {
       throw new IllegalArgumentException(context + " must have least significant bit set to 1");
     }
-    return "uaid:" + hexPortion.toLowerCase(Locale.ROOT);
+    return literal;
   }
 
   private static String requireExactNonEmpty(final String value, final String context) {
     final String literal = Objects.requireNonNull(value, context + " must not be null");
-    if (literal.isBlank()) {
+    if (literal.trim().isEmpty()) {
       throw new IllegalArgumentException(context + " must not be blank");
     }
     if (!literal.trim().equals(literal)) {
